gitops/monitoring/base/policies/allow-to-querier-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-query-frontends
spec:
  podSelector:
    matchLabels:
      type: querier-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector: {}
    - from: []
