gitops/monitoring/base/policies/allow-to-thanos-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-service
spec:
  podSelector:
    matchLabels:
      app: thanos-querier-frontend
  ingress:
  - {}
