gitops/monitoring/base/policies/deny-from-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []
